Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>DH Healthy Habits</h1>
         <nav>
-            <a href="main.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="healthinfo.html">Health Info</a>
             <a href="bmi.html">BMI Calculator</a>
         </nav>
