--- a/healthinfo.html
+++ b/healthinfo.html
@@ -10,7 +10,7 @@
     <header>
         <h1>DH Healthy Habits</h1>
         <nav>
-            <a href="main.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="healthinfo.html" class="active">Health Info</a>
             <a href="bmi.html">BMI Calculator</a>
         </nav>
