--- a/bmi.html
+++ b/bmi.html
@@ -11,7 +11,7 @@
     <header>
         <h1>DH Healthy Habits</h1>
         <nav>
-            <a href="main.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="healthinfo.html">Health Info</a>
             <a href="bmi.html" class="active">BMI Calculator</a>
         </nav>
