--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 </head>
 <body>
     <header>
-        <h1>DH Healthy Habits</h1>
-        <nav>
-            <a href="index.html" class="active">Home</a>
-            <a href="healthinfo.html">Health Info</a>
-            <a href="bmi.html">BMI Calculator</a>
-        </nav>
+        <div class="header-content">
+            <h1>DH Healthy Habits</h1>
+        </div>
     </header>
+    <nav>
+        <a href="index.html" class="active">Home</a>
+        <a href="healthinfo.html">Health Info</a>
+        <a href="bmi.html">BMI Calculator</a>
+    </nav>    
+    
     <main>
             <h2>Welcome to Healthy Habits for a Brighter Future!</h2>
             <p>Discover valuable information and tools to help you maintain a healthy lifestyle. From nutrition and exercise tips to our interactive BMI calculator, we provide the resources you need for a healthier life.</p>
     </main>
     <footer>
-        <p>&copy; 2024 DH Healthy Habits. All rights reserved.</p>
+        <p>&copy; DANISH HAIQAL BIN KARIM / BPJ231210308</p>
     </footer>
 </body>
 </html>
