--- a/healthinfo.html
+++ b/healthinfo.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <header>
-        <h1>DH Healthy Habits</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="healthinfo.html" class="active">Health Info</a>
-            <a href="bmi.html">BMI Calculator</a>
-        </nav>
+        <div class="header-content">
+            <h1>DH Healthy Habits</h1>
+        </div>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="healthinfo.html" class="active">Health Info</a>
+        <a href="bmi.html">BMI Calculator</a>
+    </nav> 
+    
     <main>
             <h2>Nutrition Tips</h2>
             <ul>
@@ -36,7 +39,7 @@
             </ul>
     </main>
     <footer>
-        <p>&copy; 2024 DH Healthy Habits. All rights reserved.</p>
+        <p>&copy; DANISH HAIQAL BIN KARIM / BPJ231210308</p>
     </footer>
 </body>
 </html>
