--- a/bmi.html
+++ b/bmi.html
@@ -9,28 +9,33 @@
 </head>
 <body>
     <header>
-        <h1>DH Healthy Habits</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="healthinfo.html">Health Info</a>
-            <a href="bmi.html" class="active">BMI Calculator</a>
-        </nav>
+        <div class="header-content">
+            <h1>DH Healthy Habits</h1>
+        </div>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="healthinfo.html">Health Info</a>
+        <a href="bmi.html"  class="active">BMI Calculator</a>
+    </nav> 
     <main>
         <h2>BMI Calculator</h2>
         <p>Body Mass Index (BMI) is a simple calculation used to assess whether a person has a healthy weight for a given height.</p>
         <form id="bmi-form">
-            <div class="input-group">
-                <label for="height">Height (cm):</label>
-                <input type="number" id="height" name="height" min="0" required>
-            </div>
-            <div class="input-group">
-                <label for="weight">Weight (kg):</label>
-                <input type="number" id="weight" name="weight" min="0" required>
+            <div class="input-group-container">
+                <div class="input-group">
+                    <label for="height">Height (cm):</label>
+                    <input type="number" id="height" name="height" min="0" required>
+                </div>
+                <div class="input-group">
+                    <label for="weight">Weight (kg):</label>
+                    <input type="number" id="weight" name="weight" min="0" required>
+                </div>
             </div>
             <button type="button" onclick="calculateBMI()">Calculate BMI</button>
             <button type="button" onclick="clearForm()">Clear</button>
         </form>
+        
 
         <!-- Spinner -->
         <div id="spinner" style="display: none;">
@@ -50,7 +55,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 DH Healthy Habits. All rights reserved.</p>
+        <p>&copy; DANISH HAIQAL BIN KARIM / BPJ231210308</p>
     </footer>
 
     <!-- Modal for BMI Result -->
