--- a/bmi.html
+++ b/bmi.html
@@ -1,71 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthy Habits - BMI Calculator</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script>
-</head>
-<body>
-    <header>
-        <div class="header-content">
-            <h1>DH Healthy Habits</h1>
-        </div>
-    </header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="healthinfo.html">Health Info</a>
-        <a href="bmi.html" class="active">BMI Calculator</a>
-    </nav> 
-    <main>
-        <h2>BMI Calculator</h2>
-        <p>Body Mass Index (BMI) is a simple calculation used to assess whether a person has a healthy weight for a given height.</p>
-        <form id="bmi-form">
-            <div class="input-group-container">
-                <div class="input-group">
-                    <label for="height">Height (cm):</label>
-                    <input type="number" id="height" name="height" min="0" required>
-                </div>
-                <div class="input-group">
-                    <label for="weight">Weight (kg):</label>
-                    <input type="number" id="weight" name="weight" min="0" required>
-                </div>
-            </div>
-            <button type="button" onclick="calculateBMI()">Calculate BMI</button>
-            <button type="button" onclick="clearForm()">Clear</button>
-        </form>
+function calculateBMI() {
+    const height = parseFloat(document.getElementById('height').value) / 100; // Convert cm to meters
+    const weight = parseFloat(document.getElementById('weight').value);
+    
+    if (isNaN(height) || isNaN(weight)) {
+        alert('Please enter valid numbers for height and weight.');
+        return;
+    }
 
-        <!-- Spinner -->
-        <div id="spinner" style="display: none;">
-            <p>Calculating...</p>
-        </div>
+    // Show spinner
+    const spinner = document.getElementById('spinner');
+    spinner.style.display = 'block';
 
-        <!-- BMI Categories Description -->
-        <div class="bmi-categories">
-            <h2>BMI Categories</h2>
-            <p>Understanding your BMI is crucial for maintaining a healthy lifestyle. Here are the different BMI categories:</p>
-            <ul>
-                <li><strong>Underweight:</strong> BMI < 18.5</li>
-                <li><strong>Normal weight:</strong> BMI 18.5 – 24.9</li>
-                <li><strong>Overweight:</strong> BMI 25 – 29.9</li>
-                <li><strong>Obesity:</strong> BMI > 30</li>
-            </ul>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; DANISH HAIQAL BIN KARIM / BPJ231210308 / DIT 4/1</p>
-    </footer>
+    // Delay calculation to simulate loading
+    setTimeout(() => {
+        const bmi = weight / (height * height);
+        let category = '';
+        let imageSrc = '';
+        let categoryInfo = '';
 
-    <!-- Modal for BMI Result -->
-    <div id="bmiModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <div id="result" class="bmi-result-content">
-                <img id="bmi-image" src="" alt="BMI category image" class="bmi-image">
-                <div id="bmi-info"></div>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+        // Determine category based on BMI value
+        if (bmi < 18.5) {
+            category = 'Underweight';
+            imageSrc = 'underweight.png';
+            categoryInfo = 'You are underweight. Consider a balanced diet to gain weight healthily.';
+        } else if (bmi >= 18.5 && bmi < 24.9) {
+            category = 'Normal weight';
+            imageSrc = 'normalweight.png';
+            categoryInfo = 'You have a normal weight. Maintain a healthy diet and regular exercise.';
+        } else if (bmi >= 25 && bmi < 29.9) {
+            category = 'Overweight';
+            imageSrc = 'overweight.png';
+            categoryInfo = 'You are overweight. Consider adjusting your diet and increasing physical activity.';
+        } else {
+            category = 'Obesity';
+            imageSrc = 'obesity.png';
+            categoryInfo = 'You are obese. It’s recommended to consult with a healthcare provider for advice.';
+        }
+
+        // Hide spinner
+        spinner.style.display = 'none';
+
+        // Display result in modal
+        const bmiInfoDiv = document.getElementById('bmi-info');
+        const bmiImage = document.getElementById('bmi-image');
+        bmiInfoDiv.innerHTML = `<strong>Your BMI is ${bmi.toFixed(1)}</strong> (${category})<br><p>${categoryInfo}</p>`;
+        bmiImage.src = imageSrc;
+        openModal();
+    }, 500); // Simulate delay
+}
+
+function clearForm() {
+    // Clear all input fields
+    document.getElementById('height').value = '';
+    document.getElementById('weight').value = '';
+
+    // Clear result
+    document.getElementById('bmi-info').innerHTML = '';
+    document.getElementById('bmi-image').src = '';
+    document.getElementById('spinner').style.display = 'none';
+}
+
+// Function to open modal
+function openModal() {
+    document.getElementById('bmiModal').style.display = 'block';
+}
+
+// Function to close modal
+function closeModal() {
+    document.getElementById('bmiModal').style.display = 'none';
+}
