--- a/bmi.html
+++ b/bmi.html
@@ -61,10 +61,7 @@
     <div id="bmiModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
-            <div id="result" class="bmi-result-content">
-                <img id="bmi-image" src="" alt="BMI category image" class="bmi-image">
-                <div id="bmi-info"></div>
-            </div>
+            <div id="result"></div>
         </div>
     </div>
 </body>
