--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
     <nav>
         <a href="index.html" class="active">Home</a>
         <a href="healthinfo.html">Health Info</a>
+        <a href="featuresection.html">Feature Section</a>
         <a href="bmi.html">BMI Calculator</a>
     </nav>    
     
     <main>
             <h2>Welcome to Healthy Habits for a Brighter Future!</h2>
             <p>Discover valuable information and tools to help you maintain a healthy lifestyle. From nutrition and exercise tips to our interactive BMI calculator, we provide the resources you need for a healthier life.</p>
+    
+            <div class="box">
+            <h2>Our Goals</h2>
+            <p>At DH Healthy Habits, we strive to educate and empower individuals with the knowledge to make informed health choices. Our goal is to promote a holistic approach to health and well-being, encompassing mental, physical, and emotional health.</p>
+            </div>
+
+            <p>Start your journey today! Explore our website and take control of your health with DH Healthy Habits.</p>
     </main>
     <footer>
-        <p>&copy; DANISH HAIQAL BIN KARIM / BPJ231210308</p>
+        <p>&copy; DANISH HAIQAL BIN KARIM / BPJ231210308 / DIT 4/1</p>
     </footer>
 </body>
 </html>
