--- a/healthinfo.html
+++ b/healthinfo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VitalBloom - Feature Section</title>
+    <title>VitalBloom - Health Info</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
